# agent-bds

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  Makefile  README.md  SYSTEM_REPORT.md  alembic.ini  config.py  docker-compose.yml  download_model.ps1  download_model.py  download_model_fast.py  download_model_minimal.ps1  download_with_aria2.ps1  init.sql  main.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py  start_server.bat  test_api.py  test_api_search.py  test_api_sync.py  test_crawl4ai.py  test_crawl4ai_simple.py  test_crawler.py  test_filter.py  test_full.py  test_html.py  test_model.py  test_platform.py  test_platforms.py  test_search.py  test_search_direct.py  test_search_quick.py  test_service_direct.py  (+3 more)
.github/workflows/: ci.yml
agents/: __init__.py  prompts.py  search_agent.py  tools.py
alembic/: env.py
api/: main.py  models.py
api/routes/: __init__.py  analytics.py  listings.py  search.py
core/: __init__.py  logging.py
crawlers/: __init__.py  base_crawler.py  css_selectors.py  facebook_crawler.py  google_crawler.py  http_client.py  httpx_crawler.py  orchestrator.py  platform_crawlers.py
crawlers/adapters/: __init__.py  alonhadat.py  base.py  batdongsan.py  batdongsan123.py  cafeland.py  chotot.py  dothi.py  homedy.py  mogi.py  muaban.py  nhadat24h.py  nhatot.py
credentials/: .gitkeep
data/: .gitkeep
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/listings/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/analytics/: charts.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/search/: filter-panel.tsx  (+1 more)
frontend/src/lib/: api.ts  utils.test.ts  utils.ts
frontend/tests/: analytics.spec.ts  listings.spec.ts  search.spec.ts
logs/: .gitkeep
nginx/: nginx.conf
parsers/: __init__.py  area_parser.py  contact_parser.py  listing_parser.py  location_parser.py  price_parser.py
scheduler/: __init__.py  jobs.py
services/: __init__.py  search_service.py  telegram_bot.py  validator.py
storage/: __init__.py  database.py  sheets.py  vector_db.py
tests/: __init__.py  test_area_parser.py  test_contact_parser.py  test_crawl4ai_system.py  test_location_parser.py  test_price_parser.py
(+2 files in other folders)
